<resources>
    <string name="app_name">Progetto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">709801169374077</string>
    <string name="fb_login_protocol_scheme">fb709801169374077</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="personal_info" />
    <string name="title_user_profile" />
    <string name="title_user_profile_modifica" />
    <string name="fatti_conoscere_inserisci_qui_la_tua_biografia">Fatti conoscere! Inserisci qui la tua biografia.</string>
    <string name="biografia">Biografia:</string>
    <string name="numero_cellulare">Numero cellulare</string>
    <string name="e_mail">E-mail:</string>
    <string name="example_nome_utente_gmail_com">example: nome_utente@gmail.com</string>
    <string name="cellulare">Cellulare:</string>
    <string name="password">Password:</string>
    <string name="textview">TextView</string>
    <string name="nickname">Nickname:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_list">MainActivityList</string>

</resources>
