<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sfondo_bianco">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="257dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:contentDescription="@string/accept"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/copertina"
                app:srcCompat="@drawable/copertina"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />


        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="182dp"
            android:layout_height="258dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:maxHeight="62dp"
                android:text="@string/textview"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/cast_intro_overlay_background_color"
                android:textColorHighlight="@color/cast_expanded_controller_background_color"
                android:textColorLink="@color/cast_expanded_controller_ad_label_background_color"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/imgProfilo" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfilo"
                android:layout_width="181dp"
                android:layout_height="181dp"
                android:clickable="false"
                android:src="@drawable/cuoca"
                android:translationX="0dp"
                android:translationY="0dp"
                android:visibility="visible" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/modificaFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:foregroundGravity="right"
                android:src="@android:drawable/ic_menu_camera"
                android:visibility="visible"
                app:backgroundTint="@color/common_google_signin_btn_text_light_default"
                app:layout_constraintBottom_creator="@android:integer/config_longAnimTime"
                app:layout_constraintBottom_toBottomOf="@+id/imgProfilo"
                app:layout_constraintRight_toRightOf="parent"
                app:rippleColor="@color/com_facebook_button_background_color_focused_disabled" />

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:overScrollMode="always"
            android:scrollbarSize="?android:attr/actionBarSize"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="bottom"
                android:text="@string/nickname"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="18sp"
                android:textStyle="normal|italic"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/nomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="true"
                android:gravity="center_horizontal"
                android:inputType="text"
                android:text="TextView"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/nome" />


            <TextView
                android:id="@+id/bioUtente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="textMultiLine"
                android:text="@string/biografia"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="18sp"
                android:textStyle="normal|italic"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/nomeCompleto" />

            <EditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/fatti_conoscere_inserisci_qui_la_tua_biografia"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/bioUtente"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/telefonoUtente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="textMultiLine"
                android:text="@string/cellulare"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="18sp"
                android:textStyle="normal|italic"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/bio" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:text="@string/numero_cellulare"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/telefonoUtente" />

            <TextView
                android:id="@+id/mail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="textMultiLine"
                android:text="@string/e_mail"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="18sp"
                android:textStyle="normal|italic"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/telefono" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text="@string/example_nome_utente_gmail_com"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/mail2" />

            <TextView
                android:id="@+id/label_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="textMultiLine"
                android:text="@string/password"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textSize="18sp"
                android:textStyle="normal|italic"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/mail" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:clickable="false"
                android:contentDescription="@string/prompt_password"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/label_pass"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/vecchia_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Inserisci qui la tua vecchia password!"
                android:clickable="false"
                android:contentDescription="@string/prompt_password"
                android:ems="10"
                android:hint='"Inserisci qui la vecchia password!"'
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/nuova_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Inserisci qui la tua vecchia password!"
                android:clickable="false"
                android:contentDescription="@string/prompt_password"
                android:ems="10"
                android:hint='"Inserisci qui la nuova password!"'
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/vecchia_password"
                tools:targetApi="o" />

        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/modificaProfilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="28dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            app:backgroundTint="@color/common_google_signin_btn_text_light_focused"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:rippleColor="@color/com_facebook_button_background_color_focused_disabled"
            app:srcCompat="@android:drawable/ic_menu_edit"
            tools:ignore="@color/cast_expanded_controller_ad_container_white_stripe_color" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>